# parallel

./: clean.sh
MPI/1.Circuit/: CMakeLists.txt  v1.cpp  v2.cpp
MPI/1.Circuit/src/: sta_v1.cpp  test.cpp
MPI/2.Eratosthenes/src/: eratos.cpp
MPI/3.Floyd/: CMakeLists.txt
MPI/3.Floyd/src/: floyd.cpp
OpenMP/1.hello_omp/: CMakeLists.txt  main.cpp
OpenMP/2.heavy_load/: CMakeLists.txt  main.cpp
OpenMP/3.threads/: main.cpp
